--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Management Landing page</title>
 
 </head>
 <body>
-    <h1 class="text-3xl">Hello world</h1>
+    <!-- Navbar -->
+    <nav class="relative container mx-auto p-6">
+        <!-- flex container -->
+        <div class="flex items-center justify-between">
+            <!-- Logo -->
+            <div class="pt-2">
+                <img src="" alt="">
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
