--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
         <!-- flex container -->
         <div class="flex items-center justify-between">
             <!-- Logo -->
-            <div class="pt-2">
-                <img src="" alt="">
+            <div class=" pt-2">
+                <img src="https://raw.githubusercontent.com/bradtraversy/tailwind-landing-page/249d73eaa143aa213a5d56de2b2a941f68b20a7a/img/logo.svg" alt="">
             </div>
+            <!-- Menu Items -->
+            <div class="hidden md:flex space-x-6">
+                <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+                <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Community</a>
+            </div>
+            <!-- Button -->
+            <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight hidden md:flex">
+                Get Started
+            </a>
         </div>
     </nav>
 </body>
