--- a/index.html
+++ b/index.html
@@ -1,33 +1,67 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Management Landing page</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navbar -->
     <nav class="relative container mx-auto p-6">
-        <!-- flex container -->
-        <div class="flex items-center justify-between">
-            <!-- Logo -->
-            <div class=" pt-2">
-                <img src="https://raw.githubusercontent.com/bradtraversy/tailwind-landing-page/249d73eaa143aa213a5d56de2b2a941f68b20a7a/img/logo.svg" alt="">
-            </div>
-            <!-- Menu Items -->
-            <div class="hidden md:flex space-x-6">
-                <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
-                <a href="#" class="hover:text-darkGrayishBlue">Product</a>
-                <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
-                <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
-                <a href="#" class="hover:text-darkGrayishBlue">Community</a>
-            </div>
-            <!-- Button -->
-            <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight hidden md:flex">
+      <!-- flex container -->
+      <div class="flex items-center justify-between">
+        <!-- Logo -->
+        <div class="pt-2">
+          <img
+            src="https://raw.githubusercontent.com/bradtraversy/tailwind-landing-page/249d73eaa143aa213a5d56de2b2a941f68b20a7a/img/logo.svg"
+            alt=""
+          />
+        </div>
+        <!-- Menu Items -->
+        <div class="hidden md:flex space-x-6">
+          <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+          <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Community</a>
+        </div>
+        <!-- Button -->
+        <a
+          href="#"
+          class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight hidden md:flex"
+        >
+          Get Started
+        </a>
+      </div>
+    </nav>
+    <!-- Hero Section -->
+    <section id="hero">
+      <!-- Flex Container -->
+      <div
+        class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0"
+      >
+        <!-- Left item -->
+        <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+          <h1
+            class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left"
+          >
+            Bring everyone together to build better products
+          </h1>
+          <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum magni
+            dignissimos unde nulla repellendus minima praesentium quisquam
+            
+          </p>
+          <div class="flex justify-center md:justify-start">
+            <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">
                 Get Started
             </a>
+          </div>
+          <div class="md:w-1/2">
+            
+          </div>
         </div>
-    </nav>
-</body>
+      </div>
+    </section>
+  </body>
 </html>
