--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
                 Get Started
             </a>
           </div>
-          <div class="md:w-1/2">
-            
-          </div>
+          
         </div>
+        <!-- Images -->
+        <div class="md:w-1/2">
+            <img src="https://raw.githubusercontent.com/bradtraversy/tailwind-landing-page/249d73eaa143aa213a5d56de2b2a941f68b20a7a/img/illustration-intro.svg" alt="">
+          </div>
       </div>
     </section>
   </body>
